# wheel_dashboard

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  build.sh  gcc-riscv64.cmake  lv_conf.h
config/: motorbike_carlife_panel_defconfig  motorbike_panel_defconfig
driver/: driver_backends.c  simulator_util.c  simulator_util.h
driver/display_backends/: drm.c  fbdev.c  sdl.c  wayland.c
include/core/: Log.h  ServiceBase.h  ServiceManager.h  types.h
include/services/: BluetoothService.h  CastService.h  OtaService.h  SensorData.h  SensorService.h  UiService.h  WifiService.h
main/: main.cpp
main/lib/: backends.h  driver_backends.c  driver_backends.h  simulator_settings.h
main/lib/display_backends/: aic_fbdev.c  fbdev.c  glfw3.c  lv_port_disp.h  x11.c
main/lib/indev_backends/: evdev.c
scripts/: common_config.cmake  parse_config.cmake
src/core/: ServiceManager.cpp
src/lvgl/: component.mk
src/services/: BluetoothService.cpp  CastService.cpp  OtaService.cpp  SensorService.cpp  UiService.cpp  WifiService.cpp
toolchains/: gcc-d21x-riscv64.cmake
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/lib64/: libcc1.la
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/riscv64-unknown-linux-gnu/lib/ldscripts/: elf32lriscv.xbn  elf32lriscv.xc  elf32lriscv.xdc  elf32lriscv.xde  elf32lriscv.xdw  elf32lriscv.xdwe  elf32lriscv.xe  elf32lriscv.xn  elf32lriscv.xsc  elf32lriscv.xsw  elf32lriscv.xwe  elf32lriscv_ilp32.xbn  elf32lriscv_ilp32.xc  elf32lriscv_ilp32.xce  elf32lriscv_ilp32.xd  elf32lriscv_ilp32.xdc  elf32lriscv_ilp32.xdce  elf32lriscv_ilp32.xde  elf32lriscv_ilp32.xdw  elf32lriscv_ilp32.xe  elf32lriscv_ilp32.xs  elf32lriscv_ilp32.xsw  elf32lriscv_ilp32.xwe  elf32lriscv_ilp32f.x  elf32lriscv_ilp32f.xc  elf32lriscv_ilp32f.xd  elf32lriscv_ilp32f.xde  elf32lriscv_ilp32f.xdw  elf32lriscv_ilp32f.xe  elf32lriscv_ilp32f.xsc  elf32lriscv_ilp32f.xsce  elf32lriscv_ilp32f.xswe  elf64lriscv.x  elf64lriscv.xbn  elf64lriscv.xce  elf64lriscv.xde  elf64lriscv.xdw  elf64lriscv.xdwe  elf64lriscv.xe  elf64lriscv.xn  (+23 more)
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/riscv64-unknown-linux-gnu/lib32/ilp32d/: libatomic.la  libgfortran.la  libgomp.la  libgomp.so.1.0.0  libstdc++.la  libstdc++.so.6.0.28  libstdc++fs.la  libsupc++.la
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/riscv64-unknown-linux-gnu/lib32v_xthead/ilp32d/: libatomic.la  libatomic.so.1.2.0  libgfortran.so.5.0.0  libgomp.so.1.0.0  libstdc++.so.6.0.28-gdb.py  libstdc++fs.la
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/riscv64-unknown-linux-gnu/lib64/lp64d/: libasan.la  libasan.so.6.0.0  libatomic.so.1.2.0  libgcc_s.so.1  libgfortran.so.5.0.0  liblsan.la  libstdc++.la  libstdc++.so.6.0.28  libsupc++.la  libubsan.la
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/riscv64-unknown-linux-gnu/lib64v_xthead/lp64d/: libatomic.so.1.2.0  libgcc_s.so.1  libgfortran.so.5.0.0  libgomp.so.1.0.0  liblsan.la  libstdc++.so.6.0.28-gdb.py  libubsan.la  libubsan.so.1.0.0
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/riscv64-unknown-linux-gnu/lib64xthead/lp64d/: libatomic.so.1.2.0  libgfortran.la  libgomp.la  libgomp.so.1.0.0  libstdc++fs.la  libubsan.la  libubsan.so.1.0.0
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/share/info/: dir  gcc.info  gccint.info  gdb.info
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/share/man/man1/: riscv64-unknown-linux-gnu-addr2line.1  riscv64-unknown-linux-gnu-ar.1  riscv64-unknown-linux-gnu-as.1  riscv64-unknown-linux-gnu-c++filt.1  riscv64-unknown-linux-gnu-dlltool.1  riscv64-unknown-linux-gnu-elfedit.1  riscv64-unknown-linux-gnu-gdb-add-index.1  riscv64-unknown-linux-gnu-gdb.1  riscv64-unknown-linux-gnu-gdbserver.1  riscv64-unknown-linux-gnu-gfortran.1  riscv64-unknown-linux-gnu-gprof.1  riscv64-unknown-linux-gnu-ld.1  riscv64-unknown-linux-gnu-nm.1  riscv64-unknown-linux-gnu-objcopy.1  riscv64-unknown-linux-gnu-objdump.1  riscv64-unknown-linux-gnu-ranlib.1  riscv64-unknown-linux-gnu-readelf.1  riscv64-unknown-linux-gnu-size.1  riscv64-unknown-linux-gnu-strings.1  riscv64-unknown-linux-gnu-strip.1  riscv64-unknown-linux-gnu-windmc.1  riscv64-unknown-linux-gnu-windres.1
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/share/man/man5/: riscv64-unknown-linux-gnu-gdbinit.5
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/sysroot/lib/ldscripts/: elf32lriscv.x  elf32lriscv.xce  elf32lriscv.xd  elf32lriscv.xdce  elf32lriscv.xs  elf32lriscv.xsce  elf32lriscv.xse  elf32lriscv.xswe  elf32lriscv.xw  elf32lriscv_ilp32.x  elf32lriscv_ilp32.xdwe  elf32lriscv_ilp32.xn  elf32lriscv_ilp32.xsc  elf32lriscv_ilp32.xsce  elf32lriscv_ilp32.xse  elf32lriscv_ilp32.xswe  elf32lriscv_ilp32.xw  elf32lriscv_ilp32f.xbn  elf32lriscv_ilp32f.xce  elf32lriscv_ilp32f.xdc  elf32lriscv_ilp32f.xdce  elf32lriscv_ilp32f.xdwe  (+35 more)
toolchains/riscv64-linux-glibc-x86_64-V2.10.1/sysroot/sbin/: sln
(+91 files in other folders)
